<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_menu_wallet"
            android:title="@string/menu_wallet" />
    </group>
    <group
        android:id="@+id/grp2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profilo"
            android:title="@string/menu_profile" />
    </group>
    <group
        android:id="@+id/grp3"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_emessi"
            android:icon="@drawable/ic_menu_vetrina"
            android:title="@string/voucher_emessi" />
    </group>
    <group
        android:id="@+id/grp4"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_transferiti"
            android:icon="@drawable/ic_menu_vetrina"
            android:title="@string/voucher_trasferiti" />
    </group>
    <group
        android:id="@+id/grp5"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>


</menu>
