<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.ey.pwbc.ui.authentication.LoginViewModel" />

        <variable
            name="user"
            type="com.ey.pwbc.model.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAsh">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp">

            <TextView
                android:id="@+id/txt_login_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/toLogin"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/titles"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <TextView
                android:id="@+id/txt_input_text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/user_name"
                android:textSize="@dimen/primary_heading"
                app:layout_constraintTop_toBottomOf="@+id/txt_login_to" />

            <EditText
                android:id="@+id/edt_login_username"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/curved_edit_text_background"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/colorDarkBlack"
                android:text="@={user.userName}"
                app:layout_constraintTop_toBottomOf="@+id/txt_input_text_username" />


            <TextView
                android:id="@+id/txt_input_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:text="@string/password"
                android:textSize="@dimen/primary_heading"
                app:layout_constraintTop_toBottomOf="@+id/edt_login_username" />

            <EditText
                android:id="@+id/edt_login_password"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/curved_edit_text_background"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/colorDarkBlack"
                android:text="@={user.password}"
                app:layout_constraintTop_toBottomOf="@+id/txt_input_text_password" />

            <TextView
                android:id="@+id/txt_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/colorLightBlue"
                android:textSize="@dimen/secondary_headings"
                app:layout_constraintTop_toBottomOf="@+id/edt_login_password" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:background="@drawable/curved_voucer_bg"
                android:gravity="center"
                android:onClick="onLoginClicked"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/colorDarkBlack"
                android:textSize="@dimen/primary_heading"
                app:layout_constraintTop_toBottomOf="@+id/txt_forgot_password" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>