<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:paddingTop="@dimen/large_padding"
    android:paddingBottom="@dimen/large_padding">

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="II tuo Voucher verra trasferito a Poste Italiane"
        android:textSize="@dimen/primary_heading"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvConfirmMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="Confermi trasferimento?"
        app:layout_constraintTop_toBottomOf="@+id/tvMessage">

    </TextView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/alert_btn_height"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/curved_voucer_bg"
        android:text="@string/confirm"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmMsg" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/alert_btn_height"
        android:layout_marginTop="36dp"
        android:background="@drawable/curved_voucer_bg"
        android:text="@string/ok"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/btnCancel"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toEndOf="@+id/btnConfirm"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmMsg" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/alert_btn_height"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/curved_voucer_bg"
        android:text="@string/annulla"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmMsg" />


</androidx.constraintlayout.widget.ConstraintLayout>